@@ -73,7 +73,7 @@ public abstract class EvalFunc<T>  {
     private static int nextSchemaId; // for assigning unique ids to UDF columns
     protected String getSchemaName(String name, Schema input) {
         String alias = name + "_";
-        if (input.getAliases().size() > 0){
+        if (input!=null && input.getAliases().size() > 0){
             alias += input.getAliases().iterator().next() + "_";
         }
 
